crates/elif-http-derive/tests/ui/fail/inject_invalid_token.rs
//! Test cases that should fail compilation with token injection

use elif_http_derive::inject;

// This should fail: empty inject arguments
#[inject()]
struct EmptyInjectController;

fn main() {}